// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatusIndicator /> should render a dot status label 1`] = `
<span
  className="StatusIndicator dot-status-label"
>
  <FontAwesomeIcon
    color="#CADDFC"
    icon="circle"
    type="solid"
  />
  <Text
    isInline={true}
    tag="span"
    type="body"
  >
    Test
  </Text>
</span>
`;

exports[`<StatusIndicator /> should render a dot status label with default values 1`] = `
<span
  className="StatusIndicator dot-status-label"
>
  <FontAwesomeIcon
    icon="circle"
    type="solid"
  />
  <Text
    isInline={true}
    tag="span"
    type="body"
  >
    Test
  </Text>
</span>
`;

exports[`<StatusIndicator /> should render a hollow dot status label 1`] = `
<span
  className="StatusIndicator dot-status-label"
>
  <FontAwesomeIcon
    icon="circle"
    type="regular"
  />
  <Text
    isInline={true}
    tag="span"
    type="body"
  >
    Test
  </Text>
</span>
`;
